# tidydir

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
mediafileorganizer/: __init__.py  __main__.py  cli.py  core.py
src/tidydir/: cli.py  core.py  define.py  media.py
tests/: core_test.py
tests/data-org/: IMG_2031.HEIC  IMG_2548.MOV
tests/tidydir/: test_core.py
