[tool.poetry]
name = "tidydir"
version = "0.1.0"
description = "tidydir organizes files with dates in their names into directories."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/tidydir"
repository = "https://github.com/mozkzki/tidydir"
documentation = "https://github.com/mozkzki/tidydir/wiki"
keywords = ['tool', 'rename', 'organize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "0.21.0"
requests = "2.28.1"
pillow = "9.4.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "0.991"
pytest = "7.2.0"
black = "23.1a1"
pytest-cov = "4.0.0"
coverage = "7.0.4"
isort = "5.11.4"
Sphinx = "4.3.2"
sphinx-rtd-theme = "1.1.1"
types-requests = "2.28.11.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tidydir = 'tidydir.cli:run'
