[tool.poetry]
name = "tidydir"
version = "0.1.0"
description = "tidydir organizes files with dates in their names into directories."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/tidydir"
repository = "https://github.com/mozkzki/tidydir"
documentation = "https://github.com/mozkzki/tidydir/wiki"
keywords = ['tool', 'rename', 'organize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.0"
requests = "2.31.0"
pillow = "9.5.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.4.0"
pytest = "7.3.2"
black = "23.3.0"
pytest-cov = "4.1.0"
coverage = "7.2.7"
isort = "5.12.0"
Sphinx = "6.2.1"
sphinx-rtd-theme = "1.2.2"
types-requests = "2.31.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tidydir = 'tidydir.cli:run'
