[tool.poetry]
name = "tidydir"
version = "0.1.0"
description = "tidydir organizes files with dates in their names into directories."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/tidydir"
repository = "https://github.com/mozkzki/tidydir"
documentation = "https://github.com/mozkzki/tidydir/wiki"
keywords = ['tool', 'rename', 'organize']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Topic :: Software Development :: Libraries',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.1"
requests = "2.31.0"
pillow = "9.5.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.8.0"
pytest = "7.4.4"
black = "23.12.1"
pytest-cov = "4.1.0"
coverage = "7.4.1"
isort = "5.13.2"
Sphinx = "6.2.1"
sphinx-rtd-theme = "1.3.0"
types-requests = "2.31.0.20240218"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tidydir = 'tidydir.cli:run'
